выполнил третью лабу
